--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".UsersProfilesActivity"></activity>
+        <activity android:name=".SettingsActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
