--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".UsersProfilesActivity"></activity>
+        <activity android:name=".PopActivity"
+            android:theme="@style/AppTheme.PopMe"></activity>
+        <activity android:name=".UsersProfilesActivity" />
         <activity android:name=".SettingsActivity" />
 
         <meta-data
