Fixed images orientation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
     //implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation "androidx.exifinterface:exifinterface:1.2.0"
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
