--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'org.apache.commons:commons-text:1.7'
     implementation 'org.apache.commons:commons-lang3:3.9'
+    implementation 'com.mikhaellopez:circularimageview:4.2.0'
 }
