--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,5 @@ dependencies {
     implementation 'org.apache.commons:commons-text:1.7'
     implementation 'org.apache.commons:commons-lang3:3.9'
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
+    implementation 'com.crystal:crystalrangeseekbar:1.1.3'
 }
