--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.9'
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
     implementation 'com.crystal:crystalrangeseekbar:1.1.3'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.firebase:firebase-messaging:20.1.7'
 }
