--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".Tags.TagsManagerActivity"></activity>
+        <activity android:name=".MainFragmentMenager"></activity>
+        <activity android:name=".Tags.TagsManagerActivity" />
         <activity android:name=".FillInfoActivity" />
         <activity
             android:name=".PopActivity"
@@ -64,23 +65,21 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".Notifications.MyFirebaseService"
+        <service
+            android:name=".Notifications.MyFirebaseService"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_SERVICE"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_SERVICE" />
             </intent-filter>
-
         </service>
-        <service android:name=".Notifications.FirebaseMessaging"
+        <service
+            android:name=".Notifications.FirebaseMessaging"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-            <action android:name="com.google.firebase.MESSAGING_EVENT"/>
-
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
-
-
         </service>
     </application>
 
