--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,9 +54,7 @@ dependencies {
     implementation "androidx.exifinterface:exifinterface:1.2.0"
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'org.apache.commons:commons-text:1.8'
     implementation 'org.apache.commons:commons-lang3:3.10'
@@ -76,4 +74,23 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    // -------- LOCAL UNIT TESTS (use JUnit5)
+    // JUnit Jupiter
+    def junit_jupiter_version = "5.3.2"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junit_jupiter_version"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:$junit_jupiter_version"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junit_jupiter_version"
+    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:$junit_jupiter_version"
+
+
+//
+//    //kotlin
+//    def junitVersion ="5.0.0"
+//    testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
+//    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+
+
 }
