--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,17 @@ dependencies {
     def mockito_version = "2.19.0"
     testImplementation "org.mockito:mockito-core:$mockito_version"
 
+
+    // Espresso
+    def androidx_test_espresso = "3.1.0"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$androidx_test_espresso"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:$androidx_test_espresso"
+    implementation "androidx.test.espresso:espresso-idling-resource:$androidx_test_espresso"
+
+    // Mockk.io
+    def mockk_version = "1.9.3"
+    androidTestImplementation "io.mockk:mockk-android:$mockk_version"
+
 //
 //    //kotlin
 //    def junitVersion ="5.0.0"
