--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
-
+apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -12,8 +12,8 @@ android {
         versionCode 5
         versionName "1.2"
         multiDexEnabled true
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunnerArguments.notClass = 'com.android.dex.DexIndexOverflowException'
     }
 
     buildTypes {
@@ -29,13 +29,19 @@ android {
         targetCompatibility = 1.8
     }
 
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+        kotlinOptions {
+            jvmTarget = "1.8"
+        }
+    }
+
+
 }
 
 dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:7.1.0'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.4'
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.lorentzos.swipecards:library:1.0.9'
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -49,12 +55,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
-    //implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "androidx.exifinterface:exifinterface:1.2.0"
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'org.apache.commons:commons-text:1.8'
     implementation 'org.apache.commons:commons-lang3:3.10'
@@ -74,6 +78,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+
+    ///TESTS
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -85,27 +91,39 @@ dependencies {
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junit_jupiter_version"
     testRuntimeOnly "org.junit.vintage:junit-vintage-engine:$junit_jupiter_version"
 
-
     // -------- MOCKITO
     def mockito_version = "2.19.0"
     testImplementation "org.mockito:mockito-core:$mockito_version"
 
-
     // Espresso
-    def androidx_test_espresso = "3.1.0"
+    def androidx_test_espresso = "3.2.0"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidx_test_espresso"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$androidx_test_espresso"
     implementation "androidx.test.espresso:espresso-idling-resource:$androidx_test_espresso"
+    debugImplementation 'androidx.fragment:fragment-testing:1.2.5'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     // Mockk.io
     def mockk_version = "1.9.3"
     androidTestImplementation "io.mockk:mockk-android:$mockk_version"
 
-//
-//    //kotlin
-//    def junitVersion ="5.0.0"
-//    testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
-//    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+    // androidx.test
+    def androidx_test = "1.1.0"
+    androidTestImplementation "androidx.test:runner:$androidx_test"
+    androidTestImplementation "androidx.test:core:$androidx_test"
+    androidTestImplementation "androidx.test.ext:junit-ktx:$androidx_test"
+
+    // androidx.fragment
+    def fragment_version = "1.2.0-rc01" // must use for new factory stuff
+    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
+    implementation "androidx.fragment:fragment:$fragment_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.0"
 
 
+    //KOTLIN
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
