--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name="com.pinder.app.MainFragmentMenager"></activity>
+        <activity android:name="com.pinder.app.MainFragmentManager"></activity>
         <activity android:name="com.pinder.app.FillInfoActivity" />
         <activity
             android:name="com.pinder.app.MainPopUpActivity"
