--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArguments.notClass = 'com.android.dex.DexIndexOverflowException'
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
