--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,4 +126,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    //GEOPOINT
+    implementation 'com.firebase:geofire-java:3.0.0'
 }
