--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,6 @@
+ext {
+    kotlin_version = '1.4.10'
+}
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
@@ -54,40 +57,40 @@ android {
 }
 
 dependencies {
-    implementation 'com.facebook.android:facebook-android-sdk:7.1.0'
+    implementation 'com.facebook.android:facebook-android-sdk:8.1.0'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.4'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.7'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.lorentzos.swipecards:library:1.0.9'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.firebase:firebase-analytics:17.4.3'
-    implementation 'com.google.firebase:firebase-database:19.3.1'
-    implementation 'com.google.firebase:firebase-storage:19.1.1'
-    implementation 'com.google.firebase:firebase-auth:19.3.1'
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'com.google.firebase:firebase-analytics:17.6.0'
+    implementation 'com.google.firebase:firebase-database:19.5.1'
+    implementation 'com.google.firebase:firebase-storage:19.2.0'
+    implementation 'com.google.firebase:firebase-auth:19.4.0'
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'com.google.android.gms:play-services-auth:18.0.0'
+    implementation 'com.google.android.gms:play-services-auth:18.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation "androidx.exifinterface:exifinterface:1.2.0"
+    implementation 'androidx.exifinterface:exifinterface:1.3.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'org.apache.commons:commons-text:1.8'
-    implementation 'org.apache.commons:commons-lang3:3.10'
+    implementation 'org.apache.commons:commons-text:1.9'
+    implementation 'org.apache.commons:commons-lang3:3.11'
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
     implementation 'com.crystal:crystalrangeseekbar:1.1.3'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.google.firebase:firebase-messaging:20.2.1'
-    implementation 'androidx.navigation:navigation-fragment:2.2.2'
-    implementation 'androidx.navigation:navigation-ui:2.2.2'
+    implementation 'com.google.firebase:firebase-messaging:20.3.0'
+    implementation 'androidx.navigation:navigation-fragment:2.3.1'
+    implementation 'androidx.navigation:navigation-ui:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-process:2.2.0'
 
     //MVVM
-    def lifecycle_version = "2.2.0-alpha03"
+    def lifecycle_version = '2.3.0-beta01'
     // Annotation processor
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     // ViewModel
@@ -96,51 +99,51 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
 
     ///TESTS
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'junit:junit:4.13.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     // -------- LOCAL UNIT TESTS (use JUnit5)
     // JUnit Jupiter
-    def junit_jupiter_version = "5.3.2"
+    def junit_jupiter_version = '5.7.0'
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junit_jupiter_version"
     testImplementation "org.junit.jupiter:junit-jupiter-params:$junit_jupiter_version"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junit_jupiter_version"
     testRuntimeOnly "org.junit.vintage:junit-vintage-engine:$junit_jupiter_version"
 
     // -------- MOCKITO
-    def mockito_version = "2.19.0"
+    def mockito_version = '3.6.0'
     testImplementation "org.mockito:mockito-core:$mockito_version"
 
     // Espresso
-    def androidx_test_espresso = "3.2.0"
+    def androidx_test_espresso = '3.3.0'
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidx_test_espresso"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$androidx_test_espresso"
     implementation "androidx.test.espresso:espresso-idling-resource:$androidx_test_espresso"
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     // Mockk.io
-    def mockk_version = "1.9.3"
+    def mockk_version = '1.10.2'
     androidTestImplementation "io.mockk:mockk-android:$mockk_version"
 
     // androidx.test
-    def androidx_test = "1.1.0"
+    def androidx_test = '1.1.0'
     androidTestImplementation "androidx.test:runner:$androidx_test"
     androidTestImplementation "androidx.test:core:$androidx_test"
     androidTestImplementation "androidx.test.ext:junit-ktx:$androidx_test"
 
     // androidx.fragment
-    def fragment_version = "1.2.0-rc01" // must use for new factory stuff
+    def fragment_version = '1.3.0-beta01' // must use for new factory stuff
     debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
     implementation "androidx.fragment:fragment:$fragment_version"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.0"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.10'
 
 
     //KOTLIN
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
 
     //GEOPOINT
     implementation 'com.firebase:geofire-java:3.0.0'
