--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.0.1'
         classpath 'com.google.gms:google-services:4.3.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
     }
     configurations.all {
         resolutionStrategy {
@@ -20,8 +21,6 @@ buildscript {
             }
         }
     }
-
-
 }
 
 allprojects {
