--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,14 +67,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
-    implementation 'com.google.firebase:firebase-analytics:17.6.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.firebase:firebase-analytics:18.0.0'
     implementation 'com.google.firebase:firebase-database:19.5.1'
     implementation 'com.google.firebase:firebase-storage:19.2.0'
-    implementation 'com.google.firebase:firebase-auth:19.4.0'
+    implementation 'com.google.firebase:firebase-auth:20.0.1'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'com.google.android.gms:play-services-auth:18.1.0'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.exifinterface:exifinterface:1.3.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
@@ -86,7 +86,7 @@ dependencies {
     implementation 'com.crystal:crystalrangeseekbar:1.1.3'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.google.firebase:firebase-messaging:20.3.0'
+    implementation 'com.google.firebase:firebase-messaging:21.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.1'
     implementation 'androidx.navigation:navigation-ui:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-process:2.2.0'
@@ -145,18 +145,18 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     //GEOPOINT
     implementation 'com.firebase:geofire-java:3.0.0'
 
     //FCM
-    implementation 'com.google.firebase:firebase-messaging-directboot:20.3.0'
+    implementation 'com.google.firebase:firebase-messaging-directboot:21.0.0'
 
     //hilt
-    implementation "com.google.dagger:hilt-android:2.28-alpha"
-    androidTestImplementation 'org.testng:testng:6.9.6'
-    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+    implementation "com.google.dagger:hilt-android:2.29.1-alpha"
+    androidTestImplementation 'org.testng:testng:7.3.0'
+    kapt "com.google.dagger:hilt-android-compiler:2.29.1-alpha"
 
     //viewmodelinject
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
@@ -167,7 +167,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:19.5.0'
 
     //phone auth
-    implementation platform('com.google.firebase:firebase-bom:26.1.0')
+//    implementation platform('com.google.firebase:firebase-bom:26.1.0')
+//    implementation 'com.google.firebase:firebase-auth'
+
 }
 kapt {
     correctErrorTypes = true
