--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:18.0.0'
     implementation 'com.google.firebase:firebase-database:19.5.1'
     implementation 'com.google.firebase:firebase-storage:19.2.0'
-    implementation 'com.google.firebase:firebase-auth:20.0.1'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
@@ -166,10 +165,9 @@ dependencies {
     //adMob
     implementation 'com.google.android.gms:play-services-ads:19.5.0'
 
-    //phone auth
-//    implementation platform('com.google.firebase:firebase-bom:26.1.0')
-//    implementation 'com.google.firebase:firebase-auth'
-
+    //phone auth not working
+    //implementation 'com.google.firebase:firebase-auth:20.0.1'
+    implementation 'com.google.firebase:firebase-auth:19.4.0'
 }
 kapt {
     correctErrorTypes = true
