--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE_" />
-
     <application
         android:name=".BaseApplication"
         android:allowBackup="true"
@@ -17,12 +16,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".RegisterActivity"></activity>
-        <activity android:name=".viewmodels.PhoneVerificationActivity" />
+        <activity android:name=".RegistrationActivity"></activity>
         <activity
             android:name=".MainFragmentManager"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".FillInfoActivity" />
         <activity
             android:name=".MainPopUpActivity"
             android:theme="@style/AppTheme.PopMe" />
@@ -43,7 +40,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegistrationActivity" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
@@ -65,7 +61,6 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-
         <service
             android:name=".notifications.MyFirebaseService"
             android:directBootAware="true"
