Created splashActivity and RequestLocationPermissionActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE_" />
+
     <application
         android:name=".BaseApplication"
         android:allowBackup="true"
@@ -16,7 +17,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".RegistrationActivity"></activity>
+        <activity android:name=".RequestLocationPermissionActivity"></activity>
+        <activity android:name=".SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".RegistrationActivity" />
         <activity
             android:name=".MainFragmentManager"
             android:windowSoftInputMode="adjustResize" />
@@ -33,13 +42,7 @@
         <activity android:name=".ChatActivity" />
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/AppTheme.LoginTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/AppTheme.LoginTheme"></activity>
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
@@ -61,6 +64,7 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
+
         <service
             android:name=".notifications.MyFirebaseService"
             android:directBootAware="true"
