--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,9 +53,11 @@ android {
                 java.srcDir testUtils
             }
         }
+        packagingOptions {
+            exclude 'META-INF/DEPENDENCIES'
+            exclude 'META-INF/INDEX.LIST'
+        }
     }
-
-
 }
 
 dependencies {
@@ -89,7 +91,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.1'
     implementation 'androidx.navigation:navigation-ui:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-process:2.2.0'
-
     //MVVM
     def lifecycle_version = '2.3.0-beta01'
     // Annotation processor
