--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+        maven { url 'https://mobile.maven.couchbase.com/maven2/dev/' }
         maven { url "https://oss.jfrog.org/libs-snapshot" }
     }
 }
