Updated authentication to cache logged user

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -180,6 +180,10 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.5'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.8.5'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.8.5'
+
+    //coroutines
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2")
+
 }
 kapt {
     correctErrorTypes = true
