Updated main view to use fragments part 2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         </activity>
         <activity android:name=".RegistrationActivity" />
         <activity
-            android:name=".MainFragmentManager"
+            android:name=".MainActivity"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".MainPopUpActivity"
