--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,8 @@ jobs:
 
     steps:
       - checkout
+      - run :
+            name: chmod permissions
+            command: chmod +x ./gradlew
       - run:
           command: ./gradlew build
